update pic path

--- a/_posts/2021-10-05-LeekBox.md
+++ b/_posts/2021-10-05-LeekBox.md
@@ -9,12 +9,12 @@ tags:
 * 🌟 I made a small handicraft during the Chinese National Day holiday, a home Internet of Things open source project - Leek Box
 * 🥳 Small stock data monitoring system implemented with ESP32+MQTT+MicroPython.
 * 🥳 It can grab stock data (such as current stock price, yesterday's closing price, today's opening price, total market capitalization, trading volume, turnover rate, etc.) from the Internet in real time, and display it on the screen of ESP32, inspired by the video I saw a person doing quantitative trading of A-shares on station B two days ago.
-* 🥳 This thing is very suitable for my kind of national leek who forgets about it a few days after buying it, if you are like me, welcome to fork my project, by the way, give my warehouse a star (the only star 🌟 is still my own order).
+* 🥳 This thing is very suitable for my kind of national leek who forgets about it a few days after buying it, if you are like me, welcome to fork my project, by the way, please give my repo a star.
 
 Repo Address: https://gitee.com/qian_zehao/leek-box
 
 
 |   |   |
 | --- | --- |
-| ![](/images/leekbox1.jpg) | ![](/images/leekbox2.jpg) |
-| ![](/images/leekbox-monitor.jpg) | ![](/images/leekbox-repo.jpg) |
+| ![](/images/blog-20211005-leekbox1.jpg) | ![](/images/blog-20211005-leekbox2.jpg) |
+| ![](/images/blog-20211005-leekbox-monitor.jpg) | ![](/images/blog-20211005-leekbox-repo.jpg) |
