--- a/_posts/2022-12-03-OpenIE.md
+++ b/_posts/2022-12-03-OpenIE.md
@@ -6,7 +6,7 @@ tags:
   - OpenIE
 ---
 
-🚀🚀🚀 Project | Prediction of Tool Wear in Machining Centers Based on Deep Learning and Its Industrial Application
+🚀🚀🚀 OpenIE Project: Prediction of Tool Wear in Machining Centers Based Method on Deep Learning and Its Industrial Application
 
 This project originated in 2022, when I was still studying Industrial Engineering at Zhengzhou University (my senior year). Although the project was newly proposed and there were many immature ideas in it, after several months of polishing, I also achieved good results (such as winning the provincial first prize in the Challenge Cup competition).
 
@@ -18,6 +18,7 @@ The project of predicting tool wear in machining centers through machine learnin
 However, this project focuses more on theoretical research, and I have invested more energy in data import, data processing, and neural network construction and testing using Mathematica and Wolfram scripts. In terms of potential industrial applications in the future, it will be considered to use the Wolfram Engine to run on cloud servers, or to export the algorithm model as a C function through Mathematica CCodeGenerator and compile it to run on the target platform.
 ### 0x02 Project Navigation
 Calculating the wear degree of machine tools by collecting machine tool signals is a typical prediction problem, which can be achieved by establishing a machine learning model.
+
 |Step | Details|
 |-------- | --------|
 |Step 1 Data Collection and Preparation | Ensure that you have collected various signal data, including spindle current, vibration, noise, and corresponding tool wear |
@@ -29,6 +30,7 @@ Calculating the wear degree of machine tools by collecting machine tool signals 
 |Step 7 Model Optimization | Based on the evaluation results, further optimization of the model may be necessary. This may include adjusting feature selection, trying different model algorithms, dealing with data imbalance, and so on|
 |Step 8 Model Deployment and Monitoring | Once satisfied with the performance of the model, it can be deployed to the production environment and continuously monitored for performance to ensure its effectiveness in practical applications|
 |Step 9 Iteration and Improvement | Data science is an iterative process. Based on feedback from practical applications, continuously optimize the model, improve feature engineering and model selection|
+
 
 ### Data Import and Process
 Define a function for read "*.csv" file, input the file name and return as data.
