--- a/_posts/2021-10-05-LeekBox.md
+++ b/_posts/2021-10-05-LeekBox.md
@@ -12,7 +12,7 @@ tags:
 * 🥳 It can grab stock data (such as current stock price, yesterday's closing price, today's opening price, total market capitalization, trading volume, turnover rate, etc.) from the Internet in real time, and display it on the screen of ESP32, inspired by the video I saw a person doing quantitative trading of A-shares on station B two days ago.
 * 🥳 This thing is very suitable for my kind of national leek who forgets about it a few days after buying it, if you are like me, welcome to fork my project, by the way, please give my repo a star.
 
-Repo Address: https://gitee.com/qian_zehao/leek-box
+Repo Address: [https://gitee.com/qian_zehao/leek-box](https://gitee.com/qian_zehao/leek-box)
 
 
 |   |   |
